@@ -32,6 +32,9 @@ public interface CoreAdminParams
   /** If you rename something, what is the new name **/
   public final static String NAME = "name";
 
+  /** If you rename something, what is the new name **/
+  public final static String DATA_DIR = "dataDir";
+
   /** Name of the other core in actions involving 2 cores **/
   public final static String OTHER = "other";
 
