@@ -147,6 +147,9 @@ New Features
 
 33. SOLR-820: Support replication on startup of master with new index. (Noble Paul, Akshay Ukey via shalin)
 
+34. SOLR-943: Make it possible to specify dataDir in solr.xml and accept the dataDir as a request parameter for
+    the CoreAdmin create command. (Noble Paul via shalin)
+
 
 Optimizations
 ----------------------
